workspace = { members = ["hello", "bye"] }

[package]
name = "belajar-rust-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
belajar-say-hello = { version = "=0.3.0", features = ["all"] }
hello = { path = "hello" }
bye = { path = "bye" }

[dev-dependencies]
uuid = { version = "=1.8.0", features = ["v4"] }
